[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlf-py"
version = "1.1.0"
description = "Dexoron Logging Framework for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Dexoron" }
]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://dexoron.su"
Repository = "https://gitlab.com/dexoron/dlf-py"

[tool.setuptools]
packages = ["dlf"]
